Fixes team :last-child photo-block spacing

--- a/dev/sass/elements/photo-block.scss
+++ b/dev/sass/elements/photo-block.scss
@@ -28,6 +28,6 @@
 	margin-bottom: $margin-s;
 }
 
-section.column:last-child .photo-block {
+section.column:last-child .photo-block:last-child {
 	margin-bottom: 0;
 }
